<resources>
    <string name="app_name">Tesis</string>
    <string name="default_web_client_id">YOUR_ACTUAL_CLIENT_ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Inicio">Inicio</string>
    <string name="Preguntas">Preguntas</string>
    <string name="Chat">Chat</string>
    <string name="Favorito">Favorito</string>
    <string name="Perfil">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>